fix layout overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,7 +25,6 @@
 
 body {
 	min-height: 100vh;
-	width: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -37,7 +36,7 @@ body {
 	min-height: 100vh;
 	display: flex;
 	position: relative;
-
+	overflow: hidden;
 }
 
 canvas#scene {
@@ -51,7 +50,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	gap: 3rem;
-	padding: 2rem;
+	padding: 1rem;
 	align-self: flex-end;
 	margin-top: 50vh;
 }
@@ -233,14 +232,13 @@ a img:hover,
 
 @media (max-width: 640px) {
 	#name {
-	font-size: 2.5rem;
-}
+		font-size: 2.5rem;
+	}
 
-#title {
-	font-size: 1.25rem;
+	#title {
+		font-size: 1.25rem;
+	}
 }
-}
-
 
 @media (min-width: 768px) {
 	main {
